--- a/client/rpc/Cargo.toml
+++ b/client/rpc/Cargo.toml
@@ -20,16 +20,16 @@ fc-rpc-core = { version = "1.1.0-dev", path = "../rpc-core" }
 fp-consensus = { version = "1.0.0", path = "../../primitives/consensus" }
 fp-rpc = { version = "2.0.0-dev", path = "../../primitives/rpc" }
 fp-storage = { version = "1.0.1-dev", path = "../../primitives/storage"}
-sp-io = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-runtime = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-api = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-transaction-pool = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-storage = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-blockchain = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-service = { version = "0.9.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-client-api = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-rpc = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-network = { version = "0.9.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
+sp-io = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-runtime = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-api = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-transaction-pool = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-storage = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-blockchain = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-service = { version = "0.9.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-client-api = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-rpc = { version = "3.0.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-network = { version = "0.9.0", git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
 pallet-evm = { version = "4.0.0-dev", path = "../../frame/evm" }
 fp-evm = { version = "2.0.0-dev", path = "../../primitives/evm" }
 pallet-ethereum = { version = "2.0.0-dev", path = "../../frame/ethereum" }
