--- a/template/node/Cargo.toml
+++ b/template/node/Cargo.toml
@@ -20,36 +20,36 @@ structopt = "0.3.8"
 jsonrpc-core = "15.0.0"
 jsonrpc-pubsub = "15.0.0"
 
-sp-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-blockchain = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-rpc-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-substrate-frame-rpc-system = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-pallet-transaction-payment-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-cli = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-core = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-executor = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-service = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-inherents = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-transaction-pool = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-transaction-pool = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-network = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-consensus-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-consensus-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-consensus-manual-seal = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-timestamp = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
+sp-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-blockchain = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-rpc-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+substrate-frame-rpc-system = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+pallet-transaction-payment-rpc = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-cli = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-core = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-executor = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-service = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-inherents = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-transaction-pool = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-transaction-pool = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-network = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-consensus-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-consensus-aura = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-consensus-manual-seal = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-consensus = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-timestamp = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
 pallet-evm = { path = "../../frame/evm" }
 pallet-ethereum = { path = "../../frame/ethereum" }
 pallet-dynamic-fee = { path = "../../frame/dynamic-fee" }
-sc-finality-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-finality-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-client-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-runtime = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-basic-authorship = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sp-block-builder = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
-sc-telemetry = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
+sc-finality-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-finality-grandpa = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-client-api = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-runtime = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-basic-authorship = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sp-block-builder = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
+sc-telemetry = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
 
 fc-consensus = { path = "../../client/consensus" }
 fp-consensus = { path = "../../primitives/consensus" }
@@ -61,7 +61,7 @@ fc-db = { path = "../../client/db" }
 fc-mapping-sync = { path = "../../client/mapping-sync" }
 
 [build-dependencies]
-substrate-build-script-utils = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4" }
+substrate-build-script-utils = { git = "https://github.com/webb-tools/substrate.git", branch = "erup-4-up-substrate-master" }
 
 [features]
 default = ["aura"]
