--- a/frame/evm/Cargo.toml
+++ b/frame/evm/Cargo.toml
@@ -35,6 +35,7 @@ evm-gasometer = { version = "0.27.0", default-features = false }
 sha3 = { version = "0.8", default-features = false }
 log = { version = "0.4", default-features = false }
 hex = { version = "0.4", default-features = false }
+hex-literal = "0.3.1"
 
 [features]
 default = ["std"]
